--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     max-width: 540px;
     background: #fff;
     margin: 100px auto 20px;
-    padding: 40px 30px 70px;
+    padding: 40px 10px 70px;
     border-radius: 10px;
 }
 
@@ -35,27 +35,28 @@
 
 .row {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    background: #edeef0;
     border-radius: 30px;
-    padding-left: 20px;
+    padding: 10px;
     margin-bottom: 25px;
 }
 
 input {
     flex: 1;
+    background: #edeef0;
     border: none;
     outline: none;
-    background: transparent;
     padding: 10px;
     font-weight: 14px;
+    border-radius: 40px;
 }
 
 button {
     border: none;
     outline: none;
-    padding: 16px 50px;
+    padding: 10px 50px;
     background: #ff5945;
     color: #fff;
     font-size: 16px;
